estrutura basica inicial

--- a/index.html
+++ b/index.html
@@ -156,7 +156,50 @@
 			</div><!-- Main Carousel /-  -->
 		</div><!-- Photo Slider /- -->
 		
-		
+		<!-- Features Section -->
+		<div id="features-section" class="features-section container-fluid no-padding">
+			<div class="section-padding"></div>
+			<div class="top-image">
+				<img src="images/features-top-img.png" alt="features-top-img" />
+			</div>
+			<!-- Container -->
+			<div class="container">
+				<!-- Section Header -->
+				<div class="section-header">
+					<h3>Our Spicy Creature</h3>
+					<h5>features</h5>
+					<img src="images/section-seprator.png" alt="section-seprator" width="76" height="10" />
+				</div><!-- Section Header /- -->
+				<div class="col-md-4 col-xs-6 col-xs-6">
+					<div class="features-content">
+						<img src="images/features-ic-1.png" alt="features-ic" width="89" height="106" />
+						<h3>delicious receipe</h3>
+						<p>The one day when the lady met this fellow and they knew it was much more than a hunch the first mate and his Skipper.</p>
+						<a href="#" title="Read More">Read More</a>
+					</div>
+				</div>
+				<div class="col-md-4 col-xs-6 col-xs-6">
+					<div class="features-content">
+						<img src="images/features-ic-2.png" alt="features-ic" width="105" height="90" />
+						<h3>global flavours</h3>
+						<p>The one day when the lady met this fellow and they knew it was much more than a hunch the first mate and his Skipper.</p>
+						<a href="#" title="Read More">Read More</a>
+					</div>
+				</div>
+				<div class="col-md-4 col-xs-6 col-xs-6">
+					<div class="features-content">
+						<img src="images/features-ic-3.png" alt="features-ic" width="91" height="106" />
+						<h3>delightful taste</h3>
+						<p>The one day when the lady met this fellow and they knew it was much more than a hunch the first mate and his Skipper.</p>
+						<a href="#" title="Read More">Read More</a>
+					</div>
+				</div>
+			</div><!-- Container /- -->
+			<div class="bottom-image">
+				<img src="images/features-bottom-img.png" alt="features-bottom-img" />
+			</div>
+			<div class="section-padding"></div>
+		</div><!-- Features Section /- -->
 		
 		
 		<!-- Order Section 2 -->
@@ -346,24 +389,6 @@
 			<div class="section-padding"></div>
 		</div><!-- Menu Section /- -->
 		
-		
-		
-		
-		<!-- Subscribe Section -->
-		<div class="subscribe-section container-fluid no-padding">
-			<!-- Container -->
-			<div class="container">
-				<div class="subscribe-content">
-					<h3>SIGNUP TO OUR NEWSLETTER</h3>
-					<div class=" col-md-6 col-sm-8 col-xs-10 input-group">
-						<input type="text" placeholder="Enter Your Email" class="form-control">
-						<span class="input-group-btn">
-							<button type="button" title="Sign Up" class="btn btn-default">Subcribe</button>
-						</span>
-					</div><!-- /input-group -->
-				</div>
-			</div><!-- Container /- -->
-		</div><!-- Subscribe Section /- -->
 	</main>
 	<!-- Footer Main -->
 	<footer id="footer-main" class="footer-main container-fluid no-padding">
