Inserindo imagens, e alinhamento do menu

--- a/gallery.html
+++ b/gallery.html
@@ -314,7 +314,7 @@
 			<!-- Widget Hours -->
 			<aside class="col-md-3 col-sm-6 col-xs-6 ftr-widget hours-widget">
 				<h3>working hours</h3>
-				<img src="images/quote-ic-3.png" alt="quote-ic" />
+				<img src="images/section-seprator.png" alt="quote-ic" />
 				<ul>
 					<li><a href="#">MON : 9.30AM to 10.30PM</a></li>
 					<li><a href="#">Tue : 9.30AM to 10.30PM</a></li>
@@ -329,7 +329,7 @@
 			<!-- Widget Links -->
 			<aside class="col-md-2 col-sm-6 col-xs-6 ftr-widget hours-widget link-widget">
 				<h3>Quick links</h3>
-				<img src="images/quote-ic-3.png" alt="quote-ic" />
+				<img src="images/section-seprator.png" alt="quote-ic" />
 				<ul>
 					<li><a href="about.html" title="About Us">About Us</a></li>
 					<li><a href="index.html" title="Features">Features</a></li>
@@ -344,7 +344,7 @@
 			<!-- Widget Contact -->
 			<aside class="col-md-4 col-sm-6 col-xs-6 ftr-widget contact-widget">
 				<h3>Contact Info</h3>
-				<img src="images/quote-ic-3.png" alt="quote-ic" />
+				<img src="images/section-seprator.png" alt="quote-ic" />
 				<div class="contact-info">
 					<p><span>Address:</span>323A,Olive Palace, Washington DC, USA.</p>
 					<p><span>Phone no:</span><a href="tel:+1992746789" title="+1-99-274-6789">+1-99-274-6789</a></p>
